# tcpkgman

./: .gitignore  LICENSE  README.md  pyproject.toml
tcpkgman/: __init__.py  __main__.py  ads_dll.py  ads_interface.py  ads_ssh_key_manager.py  tcpkg.py  tcpkgman.py  utils.py
test/: __init__.py  tcpkg-target.config  test_ads_interface.py  test_ads_ssh_key.py  test_tcpkg.py  test_tcpkgman.py
