[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcpkgman"
version = "0.1.0"
description = "Python wrapper for tcpkg CLI to manage packages on remote TwinCAT PLC targets"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "sgorsh" }
]
keywords = ["twincat", "plc", "tcpkg", "package", "manager", "remote", "ssh"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/sgorsh/tcpkgman"
Repository = "https://github.com/sgorsh/tcpkgman"
Issues = "https://github.com/sgorsh/tcpkgman/issues"

[project.scripts]
tcpkgman = "tcpkgman.__main__:main"

[tool.setuptools.packages.find]
include = ["tcpkgman*"]
